replaced tanstack query with rtk - made unifed api mapping
